name:               theseus-auth
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          theseus-auth
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Login
                    Logout
                    Settings

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , aeson
                , cookie
                , time
                , bytestring
                , text
                , wreq
                , lens
                , lens-aeson
                , mtl

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
